--- a/item/templates/item/items.html
+++ b/item/templates/item/items.html
@@ -1,7 +1,7 @@
 {% extends 'core/base.html' %}
 {% block title %} Items {% endblock %}
 {% block content %}
-    <div class="pb-6 grid grid-cols-4 gap-4 bg-gray-100">
+    <div class="grid grid-cols-4 gap-4 p-4 bg-gray-100 rounded-xl">
         <div class="col-span-1">
             <form method="get" action="{% url 'item:items' %}">
                 <input name="query" type="text" class="w-full py-4 px-6 border rounded-xl" type="text" value="{{query}}" placeholder="Find a bike, a chair or car...">
@@ -23,19 +23,19 @@
             </ul>
         </div>
         <div class="col-span-3">
-            <div class="grid grid-cols-3 gap-3">
+            <div class="grid grid-cols-3 gap-4">
                 {% for item in items %}
-                <div>
-                    <a href="{% url 'item:detail' item.id %}">
-                        <div>
-                            <img class="rounded-t-xl" src="{{item.image.url}}" alt="">
-                        </div>
-                        <div class="p-6 bg-white rounded-b-xl">
-                            <h2 class="text-2xl"> {{item.name}} </h2>
-                            <p class="text-gray-500">Price: ${{item.price}} </p>
-                        </div>
-                    </a>
-                </div>
+                    <div>
+                        <a href="{% url 'item:detail' item.id %}">
+                            <div>
+                                <img class="rounded-t-xl" src="{{item.image.url}}" alt="">
+                            </div>
+                            <div class="p-6 bg-white rounded-b-xl">
+                                <h2 class="text-2xl"> {{item.name}} </h2>
+                                <p class="text-gray-500">Price: ${{item.price}} </p>
+                            </div>
+                        </a>
+                    </div>
                 {% endfor %}
             </div>
         </div>
