--- a/item/templates/item/items.html
+++ b/item/templates/item/items.html
@@ -12,6 +12,7 @@
             <ul>
                 {% for category in categories %}
                     <li class="py-2 px-2 rounded-xl {% if category.id == category_id %} bg-gray-200 {% endif %} ">
+                        <!--! Si id de categoría actual == "category_id" entonces agrega clase "bg-gray-200" -->
                         <a href="{% url 'item:items' %}?query={{query}}&category={{category.id}}"> {{category.name}} </a>
                     </li>
                 {% endfor %}
